--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/background"
     tools:context=".ui.SearchFragment">
 
 
@@ -10,13 +11,26 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/nunito_variablefont_wght"
+            android:text="Simple Dictionary"
+            android:textColor="@color/white"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             app:cardCornerRadius="16dp"
-            app:cardBackgroundColor="@color/secondary"
+            app:cardBackgroundColor="@color/white"
             app:cardElevation="8dp">
             <androidx.appcompat.widget.SearchView
                 android:id="@+id/fragment_search_sv_search_bar"
@@ -29,22 +43,43 @@
         </androidx.cardview.widget.CardView>
 
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/fragment_search_rv_word_info_list"
-            android:layout_width="match_parent"
+
+        <TextView
+            android:textColor="@color/white"
+            android:fontFamily="@font/nunito_variablefont_wght"
+            android:id="@+id/word_tv"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:padding="16dp"
+            tools:text = "Car"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_search_sv_search_bar" />
 
         <TextView
-            android:id="@+id/test_tv"
+            android:id="@+id/phonetics_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            tools:text="/'kos/"
+            android:textStyle="italic"
+            android:fontFamily="@font/lora_variablefont_wght"
+            android:paddingLeft="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_search_sv_search_bar" />
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/meaning_list"
+            android:padding="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            app:layoutManager="LinearLayoutManager" />
     </LinearLayout>
 
 </layout>
